--- a/provinsi/susun/index.html
+++ b/provinsi/susun/index.html
@@ -192,7 +192,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-width="2"
                                 d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi RTK</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi SDM</span>
                     </a>
                 </li>
                 <li>
@@ -330,13 +330,13 @@
 
         // RTK Projects Data
         const projectsData = [
-            { name: 'RTK Provinsi Jawa Barat 2025-2030', leader: 'Dr. Ahmad Suryadi', created: '2024-02-01', completed: '2030-12-31', duration: '83 bulan' },
-            { name: 'RTK Sektor Industri Manufaktur Jabar 2024', leader: 'Ir. Siti Rahayu', created: '2024-03-15', completed: '2024-12-31', duration: '10 bulan' },
-            { name: 'RTK Sektor Pariwisata Jawa Barat 2025', leader: 'Drs. Budi Permana', created: '2024-04-01', completed: '2025-12-31', duration: '21 bulan' },
+            { name: 'RTK Provinsi DKI Jakarta 2025-2030', leader: 'Dr. Ahmad Suryadi', created: '2024-02-01', completed: '2030-12-31', duration: '83 bulan' },
+            { name: 'RTK Sektor Industri Kreatif DKI Jakarta 2024', leader: 'Ir. Siti Rahayu', created: '2024-03-15', completed: '2024-12-31', duration: '10 bulan' },
+            { name: 'RTK Sektor Pariwisata DKI Jakarta 2025', leader: 'Drs. Budi Permana', created: '2024-04-01', completed: '2025-12-31', duration: '21 bulan' },
             { name: 'RTK Sektor Teknologi Digital 2024-2029', leader: 'Dr. Rina Anggraeni', created: '2024-01-20', completed: '2029-12-31', duration: '72 bulan' },
             { name: 'RTK Sektor Kesehatan Provinsi 2025', leader: 'dr. Hendra Kusuma', created: '2024-05-10', completed: '2025-12-31', duration: '20 bulan' },
-            { name: 'RTK Sektor Pendidikan Jabar 2024-2028', leader: 'Prof. Dewi Kartini', created: '2024-02-20', completed: '2028-12-31', duration: '58 bulan' },
-            { name: 'RTK Sektor Pertanian Jawa Barat 2025', leader: 'Ir. Bambang Hartono', created: '2024-06-01', completed: '2025-12-31', duration: '19 bulan' },
+            { name: 'RTK Sektor Pendidikan DKI Jakarta 2024-2028', leader: 'Prof. Dewi Kartini', created: '2024-02-20', completed: '2028-12-31', duration: '58 bulan' },
+            { name: 'RTK Sektor UMKM DKI Jakarta 2025', leader: 'Ir. Bambang Hartono', created: '2024-06-01', completed: '2025-12-31', duration: '19 bulan' },
             { name: 'RTK Sektor Konstruksi dan Infrastruktur 2024', leader: 'Andi Setiawan, S.T.', created: '2024-01-15', completed: '2024-12-31', duration: '12 bulan' }
         ];
 
