--- a/pusat/rekapitulasi/index.html
+++ b/pusat/rekapitulasi/index.html
@@ -355,7 +355,7 @@
                 index + 1,
                 prov.name,
                 prov.count.toLocaleString('id-ID'),
-                `<a href="#" onclick="viewDetail('${prov.name}')" class="px-4 py-2 bg-indigo-600 text-white text-sm rounded-lg hover:bg-indigo-700 transition-colors inline-flex items-center">
+                `<a href="./provinsi.html?prov=${encodeURIComponent(prov.name)}" class="px-4 py-2 bg-indigo-600 text-white text-sm rounded-lg hover:bg-indigo-700 transition-colors inline-flex items-center">
                     <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
                     </svg>
@@ -419,10 +419,9 @@
             });
         });
 
-        // View detail function
+        // View detail function - now redirects to provinsi.html
         function viewDetail(provinceName) {
-            alert(`Detail untuk ${provinceName}\n\nFitur ini akan menampilkan detail peserta dari provinsi ${provinceName}.`);
-            return false;
+            window.location.href = `./provinsi.html?prov=${encodeURIComponent(provinceName)}`;
         }
     </script>
 </body>
