--- a/user/index.html
+++ b/user/index.html
@@ -122,18 +122,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
-                    </a>
-                </li>
-                <li>
                     <button data-dropdown-toggle="dropdown-perhitungan"
                         class="flex items-center justify-between w-full px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <div class="flex items-center">
@@ -257,23 +245,21 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                 <!-- Left Column -->
                 <div class="space-y-6">
-                    <!-- Continue Learning -->
                     <div class="bg-white rounded-lg p-6 shadow-sm">
                         <h2 class="text-xl font-bold text-gray-900 mb-4">Lanjutkan Belajar</h2>
-                        <div class="bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg p-6 text-white">
+                        <div class="bg-gradient-to-r from-blue-600 to-indigo-600 rounded-lg p-6 text-white">
                             <div class="flex items-center justify-between mb-4">
                                 <div>
-                                    <p class="text-sm text-indigo-100 mb-1">Terakhir diakses</p>
-                                    <h3 class="text-xl font-bold">React & TypeScript Masterclass</h3>
-                                    <p class="text-sm text-indigo-100 mt-1">Instruktur: Dr. Ahmad Wijaya</p>
+                                    <p class="text-sm text-blue-100 mb-1">Terakhir diakses</p>
+                                    <h3 class="text-xl font-bold">Indeks Pembangunan Ketenagakerjaan</h3>
                                 </div>
                                 <div class="bg-white/20 backdrop-blur-sm rounded-lg px-4 py-2">
-                                    <p class="text-2xl font-bold">65%</p>
+                                    <p class="text-2xl font-bold">33%</p>
                                     <p class="text-xs">Selesai</p>
                                 </div>
                             </div>
-                            <div class="w-full bg-indigo-400/30 rounded-full h-2 mb-4">
-                                <div class="bg-white rounded-full h-2 transition-all duration-300" style="width: 65%">
+                            <div class="w-full bg-blue-400/30 rounded-full h-2 mb-4">
+                                <div class="bg-white rounded-full h-2 transition-all duration-300" style="width: 33%">
                                 </div>
                             </div>
                             <button
@@ -293,22 +279,23 @@
                             <div
                                 class="border border-gray-200 rounded-lg p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
                                 <div class="flex gap-4">
-                                    <img src="https://picsum.photos/seed/react/120/80" alt="Course"
+                                    <img src="https://picsum.photos/seed/ipk/120/80" alt="Course"
                                         class="w-20 h-20 rounded-lg object-cover">
                                     <div class="flex-1">
                                         <div class="flex items-start justify-between mb-2">
                                             <div>
-                                                <h3 class="font-semibold text-gray-900">React & TypeScript</h3>
-                                                <p class="text-xs text-gray-500">12 dari 18 materi</p>
+                                                <h3 class="font-semibold text-gray-900">Indeks Pembangunan
+                                                    Ketenagakerjaan</h3>
+                                                <p class="text-xs text-gray-500">1 dari 3 modul</p>
                                             </div>
                                             <span
-                                                class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">
+                                                class="inline-flex items-center justify-center w-32 px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">
                                                 Sedang Berjalan
                                             </span>
                                         </div>
                                         <div class="w-full bg-gray-200 rounded-full h-2">
                                             <div class="bg-indigo-600 h-2 rounded-full transition-all duration-300"
-                                                style="width: 65%"></div>
+                                                style="width: 33%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -317,22 +304,22 @@
                             <div
                                 class="border border-gray-200 rounded-lg p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
                                 <div class="flex gap-4">
-                                    <img src="https://picsum.photos/seed/nodejs/120/80" alt="Course"
+                                    <img src="https://picsum.photos/seed/macro-adv/120/80" alt="Course"
                                         class="w-20 h-20 rounded-lg object-cover">
                                     <div class="flex-1">
                                         <div class="flex items-start justify-between mb-2">
                                             <div>
-                                                <h3 class="font-semibold text-gray-900">Node.js Backend Development</h3>
-                                                <p class="text-xs text-gray-500">8 dari 15 materi</p>
+                                                <h3 class="font-semibold text-gray-900">PTK Makro (Advanced)</h3>
+                                                <p class="text-xs text-gray-500">2 dari 8 modul</p>
                                             </div>
                                             <span
-                                                class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">
+                                                class="inline-flex items-center justify-center w-32 px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">
                                                 Sedang Berjalan
                                             </span>
                                         </div>
                                         <div class="w-full bg-gray-200 rounded-full h-2">
                                             <div class="bg-indigo-600 h-2 rounded-full transition-all duration-300"
-                                                style="width: 53%"></div>
+                                                style="width: 25%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -341,13 +328,14 @@
                             <div
                                 class="border border-gray-200 rounded-lg p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
                                 <div class="flex gap-4">
-                                    <img src="https://picsum.photos/seed/python/120/80" alt="Course"
+                                    <img src="https://picsum.photos/seed/macro/120/80" alt="Course"
                                         class="w-20 h-20 rounded-lg object-cover">
                                     <div class="flex-1">
                                         <div class="flex items-start justify-between mb-2">
                                             <div>
-                                                <h3 class="font-semibold text-gray-900">Python untuk Data Science</h3>
-                                                <p class="text-xs text-gray-500">20 dari 20 materi</p>
+                                                <h3 class="font-semibold text-gray-900">Perencanaan Tenaga Kerja Makro
+                                                </h3>
+                                                <p class="text-xs text-gray-500">8 dari 8 modul</p>
                                             </div>
                                             <span
                                                 class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-emerald-100 text-emerald-600">
