--- a/kab-kota/report/index.html
+++ b/kab-kota/report/index.html
@@ -335,8 +335,13 @@
         // Transform data for DataTable
         const tableData = courseData.map((item, index) => {
             const statusBadge = `<span class="px-3 py-1 text-xs font-semibold text-green-800 bg-green-100 rounded-full">Selesai</span>`;
-            
-            const actionButton = `<button onclick="lihatSertifikat('${item.nama}')" class="px-3 py-1 text-xs font-medium text-white bg-indigo-600 rounded hover:bg-indigo-700">Lihat Sertifikat</button>`;
+
+            const actionButton = `<button onclick="lihatSertifikat('${item.nama}', '${item.kursus}')" class="px-4 py-2 bg-indigo-600 text-white text-sm rounded-lg hover:bg-indigo-700 transition-colors inline-flex items-center">
+                <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
+                </svg>
+                Lihat Sertifikat
+            </button>`;
 
             return [
                 index + 1,
@@ -349,9 +354,15 @@
         });
 
         // Function to view certificate
-        function lihatSertifikat(nama) {
-            alert('Menampilkan sertifikat untuk: ' + nama);
-            // Implement actual certificate viewing logic here
+        function lihatSertifikat(nama, kursus) {
+            document.getElementById('modal-title').textContent = `Sertifikat - ${nama}`;
+            document.getElementById('modal-subtitle').textContent = kursus;
+            document.getElementById('certificate-modal').classList.remove('hidden');
+        }
+
+        // Function to close modal
+        function closeModal() {
+            document.getElementById('certificate-modal').classList.add('hidden');
         }
 
         // Initialize DataTable with export buttons
@@ -409,6 +420,54 @@
             });
         });
     </script>
+
+    <!-- Certificate Modal -->
+    <div id="certificate-modal" class="hidden fixed inset-0 z-50 overflow-y-auto">
+        <!-- Backdrop -->
+        <div class="fixed inset-0 bg-black bg-opacity-50 transition-opacity" onclick="closeModal()"></div>
+
+        <!-- Modal Content -->
+        <div class="flex items-center justify-center min-h-screen p-4">
+            <div class="relative bg-white rounded-lg shadow-xl w-full max-w-5xl max-h-[90vh] flex flex-col">
+                <!-- Modal Header -->
+                <div class="flex items-center justify-between p-4 border-b bg-white rounded-t-lg">
+                    <div>
+                        <h3 id="modal-title" class="text-xl font-bold text-gray-900">Sertifikat</h3>
+                        <p id="modal-subtitle" class="text-sm text-gray-600 mt-1"></p>
+                    </div>
+                    <button onclick="closeModal()" class="p-2 hover:bg-gray-100 rounded-lg transition-colors">
+                        <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
+                </div>
+
+                <!-- Modal Body - PDF Viewer -->
+                <div class="flex-1 p-4 overflow-hidden">
+                    <iframe src="../../assets/UU Nomor 13 Tahun 2003.pdf" class="w-full h-[70vh] border rounded-lg"
+                        frameborder="0">
+                    </iframe>
+                </div>
+
+                <!-- Modal Footer -->
+                <div class="flex items-center justify-end gap-2 p-4 border-t bg-gray-50 rounded-b-lg">
+                    <button onclick="closeModal()"
+                        class="px-4 py-2 bg-gray-500 hover:bg-gray-600 text-white rounded-lg transition-colors">
+                        Tutup
+                    </button>
+                    <a href="../../assets/UU Nomor 13 Tahun 2003.pdf" download
+                        class="inline-flex items-center px-4 py-2 bg-green-600 hover:bg-green-700 text-white rounded-lg transition-colors">
+                        <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                        </svg>
+                        Download Sertifikat
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
