--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -137,7 +137,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-width="2"
                                 d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi RTK</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi SDM</span>
                     </a>
                 </li>
                 <li>
@@ -267,8 +267,32 @@
             }
         };
 
+        // Generate 3-color alternating pattern (Blue-Red-Green)
+        function generateAlternatingColors(dataLength) {
+            const colors = [
+                { bg: 'rgba(59, 130, 246, 0.8)', border: 'rgba(59, 130, 246, 1)', hover: 'rgba(59, 130, 246, 1)' },   // Blue
+                { bg: 'rgba(239, 68, 68, 0.8)', border: 'rgba(239, 68, 68, 1)', hover: 'rgba(239, 68, 68, 1)' },     // Red
+                { bg: 'rgba(34, 197, 94, 0.8)', border: 'rgba(34, 197, 94, 1)', hover: 'rgba(34, 197, 94, 1)' }      // Green
+            ];
+
+            const bgColors = [];
+            const borderColors = [];
+            const hoverColors = [];
+
+            for (let i = 0; i < dataLength; i++) {
+                const colorIndex = i % 3;
+                bgColors.push(colors[colorIndex].bg);
+                borderColors.push(colors[colorIndex].border);
+                hoverColors.push(colors[colorIndex].hover);
+            }
+
+            return { bgColors, borderColors, hoverColors };
+        }
+
         // Bar Chart: SDM per Kab/Kota
         const barCtx = document.getElementById('sdmBarChart').getContext('2d');
+        const initialColors = generateAlternatingColors(chartDataByYear[2024].data.length);
+
         let sdmBarChart = new Chart(barCtx, {
             type: 'bar',
             data: {
@@ -276,11 +300,11 @@
                 datasets: [{
                     label: 'Jumlah SDM',
                     data: chartDataByYear[2024].data,
-                    backgroundColor: 'rgba(99, 102, 241, 0.8)',
-                    borderColor: 'rgba(99, 102, 241, 1)',
+                    backgroundColor: initialColors.bgColors,
+                    borderColor: initialColors.borderColors,
                     borderWidth: 1,
                     borderRadius: 6,
-                    hoverBackgroundColor: 'rgba(99, 102, 241, 1)'
+                    hoverBackgroundColor: initialColors.hoverColors
                 }]
             },
             options: {
@@ -332,8 +356,13 @@
         // Year filter change handler
         document.getElementById('yearFilter').addEventListener('change', function (e) {
             const year = e.target.value;
+            const newColors = generateAlternatingColors(chartDataByYear[year].data.length);
+
             sdmBarChart.data.labels = chartDataByYear[year].labels;
             sdmBarChart.data.datasets[0].data = chartDataByYear[year].data;
+            sdmBarChart.data.datasets[0].backgroundColor = newColors.bgColors;
+            sdmBarChart.data.datasets[0].borderColor = newColors.borderColors;
+            sdmBarChart.data.datasets[0].hoverBackgroundColor = newColors.hoverColors;
             sdmBarChart.update();
         });
 
