--- a/provinsi/laporan/index.html
+++ b/provinsi/laporan/index.html
@@ -136,7 +136,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-width="2"
                                 d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi RTK</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi SDM</span>
                     </a>
                 </li>
                 <li>
@@ -259,14 +259,15 @@
             }
         });
 
-        // Create background colors for bar chart (red for expired, green for valid)
-        const backgroundColors = rtkExpiryYears.map(year =>
-            year >= currentYear ? 'rgba(16, 185, 129, 0.8)' : 'rgba(239, 68, 68, 0.8)'
-        );
+        // Create 3-color alternating pattern for bar chart (Blue-Red-Green)
+        const colors = [
+            { bg: 'rgba(59, 130, 246, 0.8)', border: 'rgba(59, 130, 246, 1)' },   // Blue
+            { bg: 'rgba(239, 68, 68, 0.8)', border: 'rgba(239, 68, 68, 1)' },     // Red
+            { bg: 'rgba(34, 197, 94, 0.8)', border: 'rgba(34, 197, 94, 1)' }      // Green
+        ];
 
-        const borderColors = rtkExpiryYears.map(year =>
-            year >= currentYear ? 'rgba(16, 185, 129, 1)' : 'rgba(239, 68, 68, 1)'
-        );
+        const backgroundColors = rtkExpiryYears.map((year, index) => colors[index % 3].bg);
+        const borderColors = rtkExpiryYears.map((year, index) => colors[index % 3].border);
 
         // Bar Chart: RTK Validity Period per Province
         const barCtx = document.getElementById('rtkValidityBarChart').getContext('2d');
@@ -342,7 +343,10 @@
                             font: {
                                 size: 12
                             },
-                            stepSize: 1
+                            stepSize: 1,
+                            callback: function (value) {
+                                return value; // Display year as-is without formatting
+                            }
                         },
                         grid: {
                             color: 'rgba(229, 231, 235, 0.8)'
