--- a/provinsi/user/profile.html
+++ b/provinsi/user/profile.html
@@ -122,7 +122,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-width="2"
                                 d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi RTK</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi SDM</span>
                     </a>
                 </li>
                 <li>
@@ -242,8 +242,8 @@
                             <label for="instansi" class="block text-sm font-semibold text-gray-700 mb-2">
                                 Instansi
                             </label>
-                            <input type="text" id="instansi" value="Dinas Ketenagakerjaan Provinsi Jawa Barat" disabled
-                                readonly
+                            <input type="text" id="instansi"
+                                value="Dinas Tenaga Kerja dan Transmigrasi Provinsi DKI Jakarta" disabled readonly
                                 class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
                         </div>
                     </div>
