--- a/pusat/laporan/index.html
+++ b/pusat/laporan/index.html
@@ -266,14 +266,15 @@
             }
         });
 
-        // Create background colors for bar chart (red for expired, green for valid)
-        const backgroundColors = rtkExpiryYears.map(year =>
-            year >= currentYear ? 'rgba(16, 185, 129, 0.8)' : 'rgba(239, 68, 68, 0.8)'
-        );
+        // Create 3-color alternating pattern for bar chart (Blue-Red-Green)
+        const colors = [
+            { bg: 'rgba(59, 130, 246, 0.8)', border: 'rgba(59, 130, 246, 1)' },   // Blue
+            { bg: 'rgba(239, 68, 68, 0.8)', border: 'rgba(239, 68, 68, 1)' },     // Red
+            { bg: 'rgba(34, 197, 94, 0.8)', border: 'rgba(34, 197, 94, 1)' }      // Green
+        ];
 
-        const borderColors = rtkExpiryYears.map(year =>
-            year >= currentYear ? 'rgba(16, 185, 129, 1)' : 'rgba(239, 68, 68, 1)'
-        );
+        const backgroundColors = rtkExpiryYears.map((year, index) => colors[index % 3].bg);
+        const borderColors = rtkExpiryYears.map((year, index) => colors[index % 3].border);
 
         // Bar Chart: RTK Validity Period per Province
         const barCtx = document.getElementById('rtkValidityBarChart').getContext('2d');
@@ -349,7 +350,10 @@
                             font: {
                                 size: 12
                             },
-                            stepSize: 1
+                            stepSize: 1,
+                            callback: function (value) {
+                                return value; // Display year as-is without formatting
+                            }
                         },
                         grid: {
                             color: 'rgba(229, 231, 235, 0.8)'
